# gear

./: Cargo.toml  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
examples/: Cargo.toml
examples/binaries/contract-template/: Cargo.toml
examples/binaries/contract-template/src/: lib.rs
galloc/: all.html  index.html  static.ALLOC.html
gclient/: all.html  enum.DispatchStatus.html  enum.Error.html  fn.bytes_now.html  fn.code_from_os.html  fn.wasm_target.html  fn.wat2wasm.html  index.html  sidebar-items.js  struct.EventListener.html  struct.GearApi.html  struct.WSAddress.html  trait.EventProcessor.html  type.Result.html
gcore/: all.html  index.html  sidebar-items.js  struct.ActorId.html  struct.CodeId.html  struct.MessageHandle.html  struct.MessageId.html  struct.ReservationId.html
gear_backend_common/: all.html  constant.STACK_END_EXPORT_NAME.html  constant.TRIMMED_MAX_LEN.html  enum.RuntimeCtxError.html  enum.StackEndError.html  enum.TerminationReason.html  enum.TrapExplanation.html  fn.calc_stack_end.html  index.html  macro.assert_err.html  macro.assert_ok.html  sidebar-items.js  struct.BackendReport.html  struct.ExtInfo.html  struct.TrimmedString.html  trait.AsTerminationReason.html  trait.Environment.html  trait.GetGasAmount.html  trait.IntoExtInfo.html  trait.RuntimeCtx.html
gear_backend_sandbox/: all.html  index.html  sidebar-items.js
gear_common/: all.html  constant.STORAGE_PROGRAM_PAGES_PREFIX.html  constant.STORAGE_PROGRAM_PREFIX.html  constant.STORAGE_PROGRAM_STATE_WAIT_PREFIX.html  enum.CommonError.html  enum.Program.html  enum.ProgramState.html  fn.get_active_program.html  fn.get_program.html  fn.get_program_data_for_pages.html  fn.get_program_data_for_pages_optional.html  fn.get_program_page_data.html  fn.get_program_pages_data.html  fn.pages_prefix.html  fn.program_exists.html  fn.program_key.html  fn.remove_program_page_data.html  fn.reset_storage.html  fn.set_program.html  fn.set_program_allocations.html  fn.set_program_and_pages_data.html  fn.set_program_exited_status.html  fn.set_program_initialized.html  fn.set_program_page_data.html  fn.set_program_terminated_status.html  fn.waiting_init_append_message_id.html  fn.waiting_init_prefix.html  fn.waiting_init_take_messages.html  index.html  macro.wrap_counted_storage_map.html  macro.wrap_extended_storage_double_map.html  macro.wrap_storage_double_map.html  macro.wrap_storage_map.html  macro.wrap_storage_value.html  sidebar-items.js  struct.ActiveProgram.html  struct.CodeMetadata.html  struct.PageIsNotAllocatedErr.html  trait.BlockLimiter.html  trait.ExtractCall.html  (+5 more)
gear_core/: all.html  index.html  macro.charge_gas_token.html  sidebar-items.js
gear_core_errors/: all.html  enum.ExecutionError.html  enum.ExtError.html  enum.MemoryError.html  enum.MessageError.html  enum.WaitError.html  index.html  sidebar-items.js  trait.CoreError.html
gear_core_processor/: all.html  constant.ERR_EXIT_CODE.html  constant.RE_INIT_EXIT_CODE.html  constant.UNAVAILABLE_DEST_EXIT_CODE.html  enum.PrechargeResult.html  enum.PrepareResult.html  enum.ProcessorError.html  fn.calculate_gas_for_code.html  fn.calculate_gas_for_program.html  fn.execute_wasm.html  fn.handle_journal.html  fn.precharge.html  fn.prepare.html  fn.process.html  index.html  sidebar-items.js  struct.Ext.html  struct.PreparedMessageExecutionContext.html  struct.ProcessExecutionContext.html  struct.ProcessorContext.html  trait.ProcessorExt.html
gear_lazy_pages/: all.html  enum.Error.html  enum.InitError.html  enum.InitializeForProgramError.html  (+17 more)
utils/economic-checks/: Cargo.toml  README.md
utils/economic-checks/fuzz/: Cargo.toml
utils/economic-checks/fuzz/fuzz_targets/: composer_fuzz_target.rs  simple_fuzz_target.rs
utils/economic-checks/src/: lib.rs  targets.rs  util.rs
(+1380 files in other folders)
