[package]
name = "demo-contract-template"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"
license = "GPL-3.0"
workspace = "../../../"

[dependencies]
gstd = { path = "../../../gstd", features = ["debug"] }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }

[lib]

[features]
std = ["codec/std"]
default = ["std"]
